--- a/testingrenv.html
+++ b/testingrenv.html
@@ -31,8 +31,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="packageci.html"/>
-<link rel="next" href="so-whats-actually-going-on-in-the-yaml-file.html"/>
+<link rel="prev" href="understandingyaml.html"/>
+<link rel="next" href="contributions.html"/>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -141,20 +141,20 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#extensions"><i class="fa fa-check"></i><b>1.2</b> Extensions</a></li>
 <li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#more-information-and-useful-links"><i class="fa fa-check"></i><b>1.3</b> More information and useful links</a></li>
 </ul></li>
-<li class="chapter" data-level="2" data-path="community-contributions-tada.html"><a href="community-contributions-tada.html"><i class="fa fa-check"></i><b>2</b> Community contributions :tada:</a></li>
-<li class="chapter" data-level="3" data-path="packageci.html"><a href="packageci.html"><i class="fa fa-check"></i><b>3</b> Example workflow to set up continuous integration for packages</a><ul>
-<li class="chapter" data-level="3.1" data-path="packageci.html"><a href="packageci.html#package-setup-and-connect-with-github"><i class="fa fa-check"></i><b>3.1</b> Package setup and connect with Github</a><ul>
-<li class="chapter" data-level="3.1.1" data-path="packageci.html"><a href="packageci.html#new-project-github-first"><i class="fa fa-check"></i><b>3.1.1</b> New project, Github first</a></li>
-<li class="chapter" data-level="3.1.2" data-path="packageci.html"><a href="packageci.html#existing-package-with-github"><i class="fa fa-check"></i><b>3.1.2</b> Existing package with github</a></li>
+<li class="chapter" data-level="2" data-path="packageci.html"><a href="packageci.html"><i class="fa fa-check"></i><b>2</b> Example workflow to set up continuous integration for packages</a><ul>
+<li class="chapter" data-level="2.1" data-path="packageci.html"><a href="packageci.html#package-setup-and-connect-with-github"><i class="fa fa-check"></i><b>2.1</b> Package setup and connect with Github</a><ul>
+<li class="chapter" data-level="2.1.1" data-path="packageci.html"><a href="packageci.html#new-project-github-first"><i class="fa fa-check"></i><b>2.1.1</b> New project, Github first</a></li>
+<li class="chapter" data-level="2.1.2" data-path="packageci.html"><a href="packageci.html#existing-package-with-github"><i class="fa fa-check"></i><b>2.1.2</b> Existing package with github</a></li>
 </ul></li>
-<li class="chapter" data-level="3.2" data-path="packageci.html"><a href="packageci.html#actions-for-continuous-integration-checks"><i class="fa fa-check"></i><b>3.2</b> Actions for continuous integration checks</a><ul>
-<li class="chapter" data-level="3.2.1" data-path="packageci.html"><a href="packageci.html#release-check"><i class="fa fa-check"></i><b>3.2.1</b> release-check</a></li>
+<li class="chapter" data-level="2.2" data-path="packageci.html"><a href="packageci.html#actions-for-continuous-integration-checks"><i class="fa fa-check"></i><b>2.2</b> Actions for continuous integration checks</a><ul>
+<li class="chapter" data-level="2.2.1" data-path="packageci.html"><a href="packageci.html#release-check"><i class="fa fa-check"></i><b>2.2.1</b> release-check</a></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="4" data-path="testing-with-a-reproducible-environment.html"><a href="testing-with-a-reproducible-environment.html"><i class="fa fa-check"></i><b>4</b> Testing with a reproducible environment</a></li>
-<li class="chapter" data-level="5" data-path="so-whats-actually-going-on-in-the-yaml-file.html"><a href="so-whats-actually-going-on-in-the-yaml-file.html"><i class="fa fa-check"></i><b>5</b> So what’s actually going on in the yaml file?</a><ul>
-<li class="chapter" data-level="5.1" data-path="so-whats-actually-going-on-in-the-yaml-file.html"><a href="so-whats-actually-going-on-in-the-yaml-file.html#r-syntax-options"><i class="fa fa-check"></i><b>5.1</b> R Syntax options</a></li>
+<li class="chapter" data-level="3" data-path="understandingyaml.html"><a href="understandingyaml.html"><i class="fa fa-check"></i><b>3</b> So what’s actually going on in the yaml file?</a><ul>
+<li class="chapter" data-level="3.1" data-path="understandingyaml.html"><a href="understandingyaml.html#r-syntax-options"><i class="fa fa-check"></i><b>3.1</b> R Syntax options</a></li>
 </ul></li>
+<li class="chapter" data-level="4" data-path="testingrenv.html"><a href="testingrenv.html"><i class="fa fa-check"></i><b>4</b> Testing with a reproducible environment</a></li>
+<li class="chapter" data-level="5" data-path="contributions.html"><a href="contributions.html"><i class="fa fa-check"></i><b>5</b> Community contributions :tada:</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 
@@ -175,7 +175,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="testing-with-a-reproducible-environment" class="section level1">
+<div id="testingrenv" class="section level1">
 <h1><span class="header-section-number">Chapter 4</span> Testing with a reproducible environment</h1>
 <p>We can take testing a step further by setting up an environment that mimics the one we used to train out model, and is set up the same way each time. First we need to set up a <em>lockfile</em> for our package that tells R exactly what packages — including the versions — should be used to reproduce this</p>
 <p>We’ll be using the <code>renv</code> package, but a word of warning first: this package is still under active development, so this information may quickly become outdated.</p>
@@ -255,8 +255,8 @@ jobs:
           </div>
         </div>
       </div>
-<a href="packageci.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="so-whats-actually-going-on-in-the-yaml-file.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="understandingyaml.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="contributions.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
