--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Chris Brown, Murray Cadzow, Paula A Martinez, Rhydwyn McGuire, David Neuzerling, David Wilkinson, Saras Windecker" />
 
 
-<meta name="date" content="2019-12-13" />
+<meta name="date" content="2019-12-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -142,14 +142,17 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#more-information-and-useful-links"><i class="fa fa-check"></i><b>1.3</b> More information and useful links</a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="packageci.html"><a href="packageci.html"><i class="fa fa-check"></i><b>2</b> Example workflow to set up continuous integration for packages</a><ul>
-<li class="chapter" data-level="2.1" data-path="packageci.html"><a href="packageci.html#package-setup-and-connect-with-github"><i class="fa fa-check"></i><b>2.1</b> Package setup and connect with Github</a><ul>
-<li class="chapter" data-level="2.1.1" data-path="packageci.html"><a href="packageci.html#new-project-github-first"><i class="fa fa-check"></i><b>2.1.1</b> New project, Github first</a></li>
+<li class="chapter" data-level="2.1" data-path="packageci.html"><a href="packageci.html#set-up-package"><i class="fa fa-check"></i><b>2.1</b> Set up package</a><ul>
+<li class="chapter" data-level="2.1.1" data-path="packageci.html"><a href="packageci.html#new-project-github-first"><i class="fa fa-check"></i><b>2.1.1</b> New project, GitHub first</a></li>
 <li class="chapter" data-level="2.1.2" data-path="packageci.html"><a href="packageci.html#existing-package-with-github"><i class="fa fa-check"></i><b>2.1.2</b> Existing package with Github</a></li>
 <li class="chapter" data-level="2.1.3" data-path="packageci.html"><a href="packageci.html#add-github-links-to-description"><i class="fa fa-check"></i><b>2.1.3</b> Add Github links to DESCRIPTION</a></li>
 </ul></li>
 <li class="chapter" data-level="2.2" data-path="packageci.html"><a href="packageci.html#actions-for-continuous-integration-checks"><i class="fa fa-check"></i><b>2.2</b> Actions for continuous integration checks</a><ul>
-<li class="chapter" data-level="2.2.1" data-path="packageci.html"><a href="packageci.html#release-check"><i class="fa fa-check"></i><b>2.2.1</b> release-check</a></li>
+<li class="chapter" data-level="2.2.1" data-path="packageci.html"><a href="packageci.html#ci-release-check"><i class="fa fa-check"></i><b>2.2.1</b> CI release check</a></li>
+<li class="chapter" data-level="2.2.2" data-path="packageci.html"><a href="packageci.html#ci-full-check"><i class="fa fa-check"></i><b>2.2.2</b> CI full check</a></li>
 </ul></li>
+<li class="chapter" data-level="2.3" data-path="packageci.html"><a href="packageci.html#adding-secrets"><i class="fa fa-check"></i><b>2.3</b> Adding secrets</a></li>
+<li class="chapter" data-level="2.4" data-path="packageci.html"><a href="packageci.html#what-next"><i class="fa fa-check"></i><b>2.4</b> What next?</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="understanding-yaml.html"><a href="understanding-yaml.html"><i class="fa fa-check"></i><b>3</b> So what’s actually going on in the yaml file?</a><ul>
 <li class="chapter" data-level="3.1" data-path="understanding-yaml.html"><a href="understanding-yaml.html#r-syntax-options"><i class="fa fa-check"></i><b>3.1</b> R Syntax options</a></li>
@@ -179,7 +182,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Github actions with R</h1>
 <p class="author"><em>Chris Brown, Murray Cadzow, Paula A Martinez, Rhydwyn McGuire, David Neuzerling, David Wilkinson, Saras Windecker</em></p>
-<p class="date"><em>2019-12-13</em></p>
+<p class="date"><em>2019-12-15</em></p>
 </div>
 <div id="introduction" class="section level1">
 <h1><span class="header-section-number">Chapter 1</span> Introduction</h1>
