murraycadzow published a site update

--- a/packageci.html
+++ b/packageci.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Chris Brown, Murray Cadzow, Paula A Martinez, Rhydwyn McGuire, David Neuzerling, David Wilkinson, Saras Windecker" />
 
 
-<meta name="date" content="2019-12-15" />
+<meta name="date" content="2019-12-16" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -240,7 +240,7 @@ If you are not interested in syncing your package to codecov, this part is not n
 </div>
 <div id="what-next" class="section level2">
 <h2><span class="header-section-number">2.4</span> What next?</h2>
-<p>Read on to Chapter @ref{#understandingyaml} to get an introduction to the contents of the yaml files.</p>
+<p>Read on to Chapter @ref{#understanding-yaml} to get an introduction to the contents of the yaml files.</p>
 
 </div>
 </div>
