murraycadzow published a site update

--- a/packageci.html
+++ b/packageci.html
@@ -240,7 +240,7 @@ If you are not interested in syncing your package to codecov, this part is not n
 </div>
 <div id="what-next" class="section level2">
 <h2><span class="header-section-number">2.4</span> What next?</h2>
-<p>Read on to Chapter @ref{#understanding-yaml} to get an introduction to the contents of the yaml files.</p>
+<p>Read on to Chapter <a href="understanding-yaml.html#understanding-yaml">3</a> to get an introduction to the contents of the yaml files.</p>
 
 </div>
 </div>
