murraycadzow published a site update

--- a/packageci.html
+++ b/packageci.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Chris Brown, Murray Cadzow, Paula A Martinez, Rhydwyn McGuire, David Neuzerling, David Wilkinson, Saras Windecker" />
 
 
-<meta name="date" content="2019-12-16" />
+<meta name="date" content="2019-12-17" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -32,7 +32,7 @@
   
   
 <link rel="prev" href="index.html"/>
-<link rel="next" href="understanding-yaml.html"/>
+<link rel="next" href="websites-using-pkgdown-bookdown-and-blogdown.html"/>
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -154,11 +154,19 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.3" data-path="packageci.html"><a href="packageci.html#adding-secrets"><i class="fa fa-check"></i><b>2.3</b> Adding secrets</a></li>
 <li class="chapter" data-level="2.4" data-path="packageci.html"><a href="packageci.html#what-next"><i class="fa fa-check"></i><b>2.4</b> What next?</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="understanding-yaml.html"><a href="understanding-yaml.html"><i class="fa fa-check"></i><b>3</b> So what’s actually going on in the yaml file?</a><ul>
-<li class="chapter" data-level="3.1" data-path="understanding-yaml.html"><a href="understanding-yaml.html#r-syntax-options"><i class="fa fa-check"></i><b>3.1</b> R Syntax options</a></li>
+<li class="chapter" data-level="3" data-path="websites-using-pkgdown-bookdown-and-blogdown.html"><a href="websites-using-pkgdown-bookdown-and-blogdown.html"><i class="fa fa-check"></i><b>3</b> Websites using pkgdown, bookdown, and blogdown</a><ul>
+<li class="chapter" data-level="3.1" data-path="websites-using-pkgdown-bookdown-and-blogdown.html"><a href="websites-using-pkgdown-bookdown-and-blogdown.html#ghpages-setup"><i class="fa fa-check"></i><b>3.1</b> Create gh-pages branch</a></li>
+<li class="chapter" data-level="3.2" data-path="websites-using-pkgdown-bookdown-and-blogdown.html"><a href="websites-using-pkgdown-bookdown-and-blogdown.html#action-to-deploy-a-pkgdown-site"><i class="fa fa-check"></i><b>3.2</b> Action to deploy a pkgdown site</a></li>
+<li class="chapter" data-level="3.3" data-path="websites-using-pkgdown-bookdown-and-blogdown.html"><a href="websites-using-pkgdown-bookdown-and-blogdown.html#action-to-deploy-a-bookdown-site"><i class="fa fa-check"></i><b>3.3</b> Action to deploy a bookdown site</a></li>
 </ul></li>
-<li class="chapter" data-level="4" data-path="testing-with-renev.html"><a href="testing-with-renev.html"><i class="fa fa-check"></i><b>4</b> Testing with a reproducible environment</a></li>
-<li class="chapter" data-level="5" data-path="contributions.html"><a href="contributions.html"><i class="fa fa-check"></i><b>5</b> Community contributions</a></li>
+<li class="chapter" data-level="4" data-path="understanding-yaml.html"><a href="understanding-yaml.html"><i class="fa fa-check"></i><b>4</b> So what’s actually going on in the yaml file?</a><ul>
+<li class="chapter" data-level="4.1" data-path="understanding-yaml.html"><a href="understanding-yaml.html#r-syntax-options"><i class="fa fa-check"></i><b>4.1</b> R Syntax options</a></li>
+<li class="chapter" data-level="4.2" data-path="understanding-yaml.html"><a href="understanding-yaml.html#secrets"><i class="fa fa-check"></i><b>4.2</b> GitHub Secrets</a><ul>
+<li class="chapter" data-level="4.2.1" data-path="understanding-yaml.html"><a href="understanding-yaml.html#github-pat"><i class="fa fa-check"></i><b>4.2.1</b> Personal access tokens</a></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="5" data-path="testing-with-renev.html"><a href="testing-with-renev.html"><i class="fa fa-check"></i><b>5</b> Testing with a reproducible environment</a></li>
+<li class="chapter" data-level="6" data-path="contributions.html"><a href="contributions.html"><i class="fa fa-check"></i><b>6</b> Community contributions</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 
@@ -240,7 +248,7 @@ If you are not interested in syncing your package to codecov, this part is not n
 </div>
 <div id="what-next" class="section level2">
 <h2><span class="header-section-number">2.4</span> What next?</h2>
-<p>Read on to Chapter <a href="understanding-yaml.html#understanding-yaml">3</a> to get an introduction to the contents of the yaml files.</p>
+<p>Read on to Chapter <a href="understanding-yaml.html#understanding-yaml">4</a> to get an introduction to the contents of the yaml files.</p>
 
 </div>
 </div>
@@ -250,7 +258,7 @@ If you are not interested in syncing your package to codecov, this part is not n
         </div>
       </div>
 <a href="index.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="understanding-yaml.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="websites-using-pkgdown-bookdown-and-blogdown.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
