--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Chris Brown, Murray Cadzow, Paula A Martinez, Rhydwyn McGuire, David Neuzerling, David Wilkinson, Saras Windecker" />
 
 
-<meta name="date" content="2019-12-16" />
+<meta name="date" content="2019-12-17" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -154,11 +154,19 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.3" data-path="packageci.html"><a href="packageci.html#adding-secrets"><i class="fa fa-check"></i><b>2.3</b> Adding secrets</a></li>
 <li class="chapter" data-level="2.4" data-path="packageci.html"><a href="packageci.html#what-next"><i class="fa fa-check"></i><b>2.4</b> What next?</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="understanding-yaml.html"><a href="understanding-yaml.html"><i class="fa fa-check"></i><b>3</b> So what’s actually going on in the yaml file?</a><ul>
-<li class="chapter" data-level="3.1" data-path="understanding-yaml.html"><a href="understanding-yaml.html#r-syntax-options"><i class="fa fa-check"></i><b>3.1</b> R Syntax options</a></li>
+<li class="chapter" data-level="3" data-path="websites-using-pkgdown-bookdown-and-blogdown.html"><a href="websites-using-pkgdown-bookdown-and-blogdown.html"><i class="fa fa-check"></i><b>3</b> Websites using pkgdown, bookdown, and blogdown</a><ul>
+<li class="chapter" data-level="3.1" data-path="websites-using-pkgdown-bookdown-and-blogdown.html"><a href="websites-using-pkgdown-bookdown-and-blogdown.html#ghpages-setup"><i class="fa fa-check"></i><b>3.1</b> Create gh-pages branch</a></li>
+<li class="chapter" data-level="3.2" data-path="websites-using-pkgdown-bookdown-and-blogdown.html"><a href="websites-using-pkgdown-bookdown-and-blogdown.html#action-to-deploy-a-pkgdown-site"><i class="fa fa-check"></i><b>3.2</b> Action to deploy a pkgdown site</a></li>
+<li class="chapter" data-level="3.3" data-path="websites-using-pkgdown-bookdown-and-blogdown.html"><a href="websites-using-pkgdown-bookdown-and-blogdown.html#action-to-deploy-a-bookdown-site"><i class="fa fa-check"></i><b>3.3</b> Action to deploy a bookdown site</a></li>
 </ul></li>
-<li class="chapter" data-level="4" data-path="testing-with-renev.html"><a href="testing-with-renev.html"><i class="fa fa-check"></i><b>4</b> Testing with a reproducible environment</a></li>
-<li class="chapter" data-level="5" data-path="contributions.html"><a href="contributions.html"><i class="fa fa-check"></i><b>5</b> Community contributions</a></li>
+<li class="chapter" data-level="4" data-path="understanding-yaml.html"><a href="understanding-yaml.html"><i class="fa fa-check"></i><b>4</b> So what’s actually going on in the yaml file?</a><ul>
+<li class="chapter" data-level="4.1" data-path="understanding-yaml.html"><a href="understanding-yaml.html#r-syntax-options"><i class="fa fa-check"></i><b>4.1</b> R Syntax options</a></li>
+<li class="chapter" data-level="4.2" data-path="understanding-yaml.html"><a href="understanding-yaml.html#secrets"><i class="fa fa-check"></i><b>4.2</b> GitHub Secrets</a><ul>
+<li class="chapter" data-level="4.2.1" data-path="understanding-yaml.html"><a href="understanding-yaml.html#github-pat"><i class="fa fa-check"></i><b>4.2.1</b> Personal access tokens</a></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="5" data-path="testing-with-renev.html"><a href="testing-with-renev.html"><i class="fa fa-check"></i><b>5</b> Testing with a reproducible environment</a></li>
+<li class="chapter" data-level="6" data-path="contributions.html"><a href="contributions.html"><i class="fa fa-check"></i><b>6</b> Community contributions</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 
@@ -182,7 +190,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Github actions with R</h1>
 <p class="author"><em>Chris Brown, Murray Cadzow, Paula A Martinez, Rhydwyn McGuire, David Neuzerling, David Wilkinson, Saras Windecker</em></p>
-<p class="date"><em>2019-12-16</em></p>
+<p class="date"><em>2019-12-17</em></p>
 </div>
 <div id="introduction" class="section level1">
 <h1><span class="header-section-number">Chapter 1</span> Introduction</h1>
@@ -217,12 +225,12 @@ You can add these example <code>yaml</code> files using the following function (
 <p>There are a huge selection of other actions that you can choose from in the <a href="https://github.com/marketplace?type=actions">Marketplace</a> that automate not only GitHub processes but also programming-language-specific options.
 To implement these, go to any repo you <em>own</em> and you will find “Actions” on the top menu.
 Click on “New Workflow” and pick one from the templates provided.</p>
-<p>In some cases the <code>yaml</code> will need to be modified. More detail on understanding the <code>yaml</code> files can be found in chapter <a href="understanding-yaml.html#understanding-yaml">3</a>.</p>
+<p>In some cases the <code>yaml</code> will need to be modified. More detail on understanding the <code>yaml</code> files can be found in chapter <a href="understanding-yaml.html#understanding-yaml">4</a>.</p>
 </div>
 </div>
 <div id="extensions" class="section level2">
 <h2><span class="header-section-number">1.2</span> Extensions</h2>
-<p>We experimented with setting up continuous integration with a reproducible environment using <code>renv</code> in chapter <a href="testing-with-renev.html#testing-with-renev">4</a>.</p>
+<p>We experimented with setting up continuous integration with a reproducible environment using <code>renv</code> in chapter <a href="testing-with-renev.html#testing-with-renev">5</a>.</p>
 </div>
 <div id="more-information-and-useful-links" class="section level2">
 <h2><span class="header-section-number">1.3</span> More information and useful links</h2>
