orchid00 published a site update

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>rendering/compiling e.g. of rmarkdown, bookdown, blogdowns etc</li>
 </ul>
 <p>GitHub actions follow the steps designated in a <code>yaml</code> file, which we place in the <code>.github/workflows</code> folder of the repo.
-We can add these <code>yaml</code> files to our repo either by clicking on a series of steps on GitHub.com, or using wrapper functions provided by the <code>usethis</code> package, depending on which actions you which to include.
+We can add these <code>yaml</code> files to our repo either by clicking on a series of steps on GitHub.com, or using wrapper functions provided by the <code>usethis</code> package, depending on which actions you wish to include.
 We describe both ways here.</p>
 <div id="usethis-wrappers" class="section level3">
 <h3><span class="header-section-number">1.1.1</span> Usethis Wrappers</h3>
