orchid00 published a site update

--- a/websites-using-pkgdown-bookdown-and-blogdown.html
+++ b/websites-using-pkgdown-bookdown-and-blogdown.html
@@ -285,7 +285,7 @@ jobs:
      - name: Deploy to GitHub Pages
        uses: Cecilapp/GitHub-Pages-deploy@v3
        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}# https://github.com/settings/tokens
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        with:
           build_dir: _book/ # &quot;_site/&quot; by default
           email: ${{ secrets.EMAIL }}  # must be a verified email
@@ -346,7 +346,7 @@ jobs:
      - name: Deploy to GitHub Pages
        uses: Cecilapp/GitHub-Pages-deploy@v3
        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}# https://github.com/settings/tokens
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        with:
           build_dir: public/                     # &quot;_site/&quot; by default
           email: ${{ secrets.EMAIL }}  # must be a verified email </code></pre>
